argocd/projects/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.8.10
          imagePullPolicy: Always
          ports:
            # - containerPort: 8096
            #   protocol: TCP
            - containerPort: 8920
              protocol: TCP
            # - containerPort: 7359
            #   protocol: UDP
            # - containerPort: 1900
            #   protocol: UDP
          volumeMounts:
            # - mountPath: /data/media
            #   name: media
            #   readOnly: True
            - mountPath: /config
              name: config
          resources: {}
      restartPolicy: Always
      volumes:
        # - name: media
        #   nfs:
        #     server: kasumi
        #     path: /data/Media/
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
