argocd/projects/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  jellyfin
  namespace: jellyfin
spec:
  selector:
    app:  jellyfin
  type: ClusterIP
  ports:
    # - name: ui
    #   port: 8096
    #   protocol: TCP
    #   targetPort: 8096
    - name: https
      port: 8920
      protocol: TCP
      targetPort: 8920
