argocd/projects/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: https
            port:
              number: 8920
